# savefile

./: .gitignore  CHANGELOG.md  Cargo.toml
.github/workflows/: rust.yml
savefile/: Cargo.toml
savefile-abi/: Cargo.toml
savefile-abi-min/: Cargo.toml
savefile-abi-min-lib/: Cargo.toml
savefile-abi-min-lib-impl/: Cargo.toml
savefile-derive/: Cargo.toml
savefile-derive/src/: common.rs  deserialize.rs  lib.rs  savefile_abi.rs  serialize.rs
savefile-min-build/: Cargo.toml
savefile-min-build/src/: lib.rs
savefile-test/: Cargo.toml
savefile/src/: lib.rs
