[package]
name = "savefile-abi-min-lib-impl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
savefile = { workspace = true, features = ["derive"] }
savefile-abi.workspace = true
savefile-derive.workspace = true
savefile-abi-min-lib.workspace = true
bytes.workspace = true
