[package]
name = "savefile-abi-min-lib"
version = "0.1.0"
edition = "2021"


[dependencies]
savefile = { workspace = true, features = ["derive"] }
savefile-abi.workspace = true
savefile-derive.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-util.workspace = true
async-trait.workspace = true
