[package]
name = "savefile-abi-min"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"



[dependencies]
savefile = { workspace = true, features = ["derive"] }
savefile-abi.workspace = true
byteorder.workspace = true
savefile-derive.workspace = true
savefile-abi-min-lib.workspace = true
tokio.workspace = true
