[package]
name = "savefile-abi"
version.workspace = true
edition = "2021"
authors = ["Anders Musikka <anders@andersmusikka.se>"]
documentation = "https://docs.rs/savefile-abi/"
homepage = "https://github.com/avl/savefile/blob/master/savefile-abi/README.md"
repository = "https://github.com/avl/savefile"
rust-version = "1.82"

description = "Easy to use, simple, stable ABI for Rust-libraries. Allows creating dynamically loadable plugins written in rust."

readme = "README.md"

keywords = ["dylib", "dlopen", "ffi"]

license = "MIT/Apache-2.0"

[dependencies]
savefile.workspace = true
savefile-derive.workspace = true
byteorder.workspace = true
libloading.workspace = true
bytes = { workspace = true, optional = true }

[features]
default = ["bytes"]

[dev-dependencies]
async-trait.workspace = true

[build-dependencies]
rustc_version.workspace = true
