[package]
name = "savefile-derive"
version.workspace = true
authors = ["Anders Musikka <anders@andersmusikka.se>"]
repository = "https://github.com/avl/savefile"
rust-version = "1.82"
description = "Custom derive macros for savefile crate - simple, convenient, fast, versioned, binary serialization/deserialization library."

readme = "../README.md"

keywords = ["serialization", "deserialization"]

categories = ["encoding"]

license = "MIT/Apache-2.0"

edition = "2021"

[features]
default = []
nightly = []

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2 = { workspace = true, features = ["nightly", "span-locations"] }

