[package]
name = "savefile-test"
version.workspace = true
authors = ["Anders Musikka <anders@andersmusikka.se>"]
edition = "2021"

[features]
default = ["external_benchmarks"]
# Enable this to reduce risk of crashing on corrupt input. Provides sanity checks for sizes of objects.
# This is mostly to be able to run fuzzers against the deserializers without them being guaranteed to easily find out-of-memory crashes.
external_benchmarks = []
nightly = ["savefile/nightly"]

[dependencies]
savefile = { workspace = true, features = ["size_sanity_checks", "encryption", "compression", "bit-set", "bit-vec", "rustc-hash", "serde_derive", "quickcheck", "nalgebra"] }
savefile-derive.workspace = true
savefile-abi = { workspace = true, features = ["bytes"] }
bit-vec = "0.8"
arrayvec.workspace = true
smallvec.workspace = true
indexmap.workspace = true
byteorder.workspace = true
rand.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_derive.workspace = true
bincode.workspace = true
bit-set = "0.8"
rustc-hash.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true
insta.workspace = true
nalgebra.workspace = true
tokio = { workspace = true, features = ["test-util", "rt-multi-thread", "full"] }
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true

[build-dependencies]
rustc_version.workspace = true

