[package]
name = "savefile"
version.workspace = true
authors = ["Anders Musikka <anders@andersmusikka.se>"]
documentation = "https://docs.rs/savefile/"
homepage = "https://github.com/avl/savefile/"
repository = "https://github.com/avl/savefile"

exclude = [
    "*.bin"
]

description = "Simple, convenient, fast, versioned, binary serialization/deserialization library."

readme = "../README.md"

keywords = ["serialization", "deserialization", "introspection"]

categories = ["encoding"]

license = "MIT/Apache-2.0"

edition = "2021"

rust-version = "1.82"

[features]
default = ["indexmap", "arrayvec", "smallvec", "bit-vec", "parking_lot","bit-set", "bit-set08", "bit-vec08", "chrono", "derive"]
bit-set = ["dep:bit-set", "bit-vec"]
bit-set08 = ["dep:bit-set08", "bit-vec08"]
serde_derive = ["dep:serde_derive", "serde"]

# Enable this to reduce risk of crashing on corrupt input. Provides sanity checks for sizes of objects.
# This is mostly to be able to run fuzzers against the deserializers without them being guaranteed to easily find out-of-memory crashes.
size_sanity_checks = []
# Use features only available on the nightly rust-compiler.
# Enabling this provides slightly better introspection support.
# Automatically set by build.rs for nightly compilers
nightly=[]


compression = ["bzip2"]

encryption = ["ring", "rand"]

derive = ["dep:savefile-derive"]

[dependencies]
bit-vec = { version = "0.6", optional = true }
nalgebra = { workspace = true, optional = true }
bit-vec08 = { package = "bit-vec", version = "0.8", optional = true }
arrayvec = { workspace = true, optional = true }
smallvec = { workspace = true, optional = true }
indexmap = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
bzip2 = { workspace = true, optional = true }
bit-set = { version = "0.5", optional = true }
bit-set08 = { package = "bit-set", version = "0.8", optional = true }
rustc-hash = { workspace = true, optional = true }
memoffset.workspace = true
byteorder.workspace = true
savefile-derive = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
quickcheck = { workspace = true, optional = true }
emath = { workspace = true, optional = true }
ecolor = { workspace = true, optional = true }

[dev-dependencies]
savefile-derive.workspace = true

[build-dependencies]
rustc_version.workspace = true



